[JTT-2611] Add pom.xml